--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "lucide-react": "^0.540.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^5.5.0",
         "react-just-parallax": "^3.1.16",
-        "react-router-dom": "^6.22.1",
+        "react-router-dom": "^6.30.1",
         "react-slick": "^0.30.3",
         "scroll-lock": "^2.1.5",
         "slick-carousel": "^1.8.1"
